# IDIS

./: .dockerignore  .gitignore  .replit  COMMIT_MESSAGE.txt  Dockerfile  README.docker.md  add_override_column.py  add_pending_docs.py  app.py  check_db.py  check_filed_paths.py  check_new_document.py  classifier_agent.py  context_store.py  cover_sheet.py  create_test_pdf.py  debug_case_documents.py  debug_checklist_status.py  debug_dashboard_schema.py  debug_db_structure.py  debug_demo.py  debug_document_id.py  debug_schema.py  debug_upload.py  demo_cognitive_agent.py  demo_context_store.py  demo_cover_sheet.py  demo_document_viewer.py  demo_enhanced_tagger.py  demo_idis.db  demo_idis_pipeline.py  demo_unified_ingestion.py  deploy-native.sh  deploy.sh  docker-compose.yml  docker-test.py  docker_demo_context_store.py  docker_run_mvp.py  examine_db_schema.py  fix_archive_backlog.py  (+53 more)
.streamlit/: config.toml
agents/: __init__.py  cognitive_agent.py
api/: main.py  test_api.py
attached_assets/: IDIS planning doc V2.2 for Phase 1 MVP focus 5-21-25.md  Pasted-Okay-let-s-forge-ahead-with-the-summarizer-agent-py-This-agent-will-bring-in-the-power-of-L-1747877340101.txt  Pasted-Okay-let-s-get-this-Smart-Cover-Sheet-Renderer-built-This-module-will-be-responsible-for-creatin-1747887331304.txt  Pasted-Okay-let-s-rock-and-roll-with-the-classifier-agent-py-This-agent-will-take-the-text-extract-1747875348078.txt  Pasted-Okay-with-the-Context-Store-successfully-implemented-and-checkpointed-on-GitHub-we-re-ready-to-bui-1747872862949.txt  (+2 more)
demo_holding/: test_TypeError_fix.txt  (+1 more)
(+49 files in other folders)
